[package]
name = "photo_unloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = "0.6"
gotham_derive = "0.7.0"
mime = "0.3"
tokio = { version = "1", features = ["full"] }
uuid = "1.4.1"
hyper = "0.14"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3.14"
multipart = { version = "0.18", default-features = false, features = ["server"] }
serde_json = "1.0"